[gd_scene load_steps=2 format=3 uid="uid://cr47sovtmwvxp"]

[ext_resource type="Script" path="res://Scripts/top_time.gd" id="1_arqek"]

[node name="TopTime" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_arqek")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 77.0
scale = Vector2(0.8, 1)

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "   1"

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "   2"

[node name="Label3" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "   3"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 23.0
offset_right = 63.0
offset_bottom = 77.0

[node name="Top1" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Top2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Top3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
